# django-rbac

./: README.md  pyproject.toml
django_rbac/: admin.py  apps.py  engine.py  models.py  tests.py  utils.py
django_rbac/api/: read.py  write.py
django_rbac/migrations/: 0001_initial.py  0002_alter_ketorelationtuples_commit_time.py  0003_auto_20220905_0712.py
django_rbac/rdb/: apps.py  definitions.py  engine.py  models.py  utils.py
django_rbac/rdb/api/: read.py  write.py
django_rbac/rdb/migrations/: 0001_initial.py  0002_alter_ketorelationtuples_commit_time.py
test_app/: manage.py
test_app/config/: keto.yaml  settings.py
