[tool.poetry]
name = "django-rbac"
version = "0.1.0"
description = ""
authors = ["Brady <baoshenghu@citydnatech.com>"]

[[tool.poetry.source]]
name = "tuna"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.0.0"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
