[tool.poetry]
name = "django-rbac"
version = "0.1.0"
description = ""
authors = ["Brady <baoshenghu@citydnatech.com>"]

[[tool.poetry.source]]
name = "tuna"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.0.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
